tests/paczka1/fuzzy1/60889299.err
Error in line 2: ue9drCbyKf S902 39,5
Error in line 17: 6jc S867 -2,3
Error in line 10: 6jc S867 34,8
Error in line 18: 6jc S309 91,8
Error in line 22: 6jc S867 34,8
Error in line 27: S581 S581 22,8
Error in line 23: 6jc S581 97,0
Error in line 31: ue9drCbyKf S581 19,4
Error in line 36: 05AlnXv S581 32,4
